# Auvin_WakeWord

./: .gitignore  README.md  package-lock.json  package.json  record_field_gate.sh
models/: auvin.onnx  auvin.onnx.data  auvin.pt
training/: pyproject.toml
training/configs/: auvin.yaml
training/src/: __init__.py  audio_utils.py  constants.py  download_models.py  download_voices.py  export_onnx.py  featurize.py  generate_validation_clips.py  model.py  paths.py  phonemize_check.py  prepare_field_data.py  probe_onnx.py  streaming_featurizer.py  synthesize.py  train.py  validate_clips.py
